fixed 2nd page alignment center

--- a/rocket.css
+++ b/rocket.css
@@ -185,7 +185,7 @@ button:focus{
   margin-right:auto;
 }
 .logoIcon{
-  margin:10px 50px;
+  margin:10px auto;
   width:50px;
   height:50px;
   border-radius:25px;
